<resources>
    <string name="app_name">Hacknovation</string>
    <string name="web_client_id">1046843890242-hk0va7tdm5vjm2407626lgua6uu6vmut.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_privacy_help">Terms Privacy help</string>
    <string name="logo">logo</string>
    <string name="hacknovation_2_0">HACKNOVATION 2.0</string>
    <string name="powered_by_hacknovation_team">Powered by hacknovation team</string>
    <string name="don_t_just_innovate_nhacknovate">Don\'t just innovate,\nHacknovate.</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="welcome_to_hacknovation_by_giet_university_nlogin_and_start_innovating">Welcome to Hacknovation by GIET University.\nLogin and start innovating.</string>
    <string name="evaluator_admin_login">Evaluator / Admin Login</string>
    <string name="back_to_student_login">Back To Student Login</string>
    <string name="access_the_hacathon_management_panel_nwith_your_credentials">Access the hacathon management panel\nwith your credentials.</string>
    <string name="email_address">Email Address</string>
    <string name="security_code_evaluator_id">Security Code (Evaluator ID)</string>
    <string name="log_in">Log In</string>
    <string name="evaluator_login">Evaluator Login</string>
    <string name="faculity">Faculity</string>
    <string name="hacknovation_team">Hacknovation Team</string>
    <string name="devteam">DevTeam</string>
    <string name="about_hacknocation">About Hacknovation</string>
    <string name="report_bug">Report Bug</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hackathon_starts_in">HACKATHON STARTS IN...</string>
    <string name="days">DAYS</string>
    <string name="hours">HOURS</string>
    <string name="mins">MINS</string>
    <string name="secs">SECS</string>
    <string name="start_evaluation">START EVALUATION</string>
    <string name="search_team_name_or_id">Search team name or ID...</string>
    <string name="back">Back</string>
    <string name="add_new_team">ADD NEW TEAM</string>
    <string name="email">Email</string>
    <string name="roll_no">Roll No</string>
    <string name="member_one">MEMBER ONE</string>
    <string name="_2">2</string>
    <string name="basic_information">BASIC INFORMATION</string>
    <string name="full_name">FULL NAME</string>
    <string name="team_leader_details">TEAM LEADER DETAILS</string>
    <string name="hkxx">HKXX</string>
    <string name="e_g_23csexxx">e.g. 23CSEXXX</string>
    <string name="leader_giet_edu">leader@giet.edu</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="_91_00000_00000">+91 00000 00000</string>
    <string name="users">Users</string>
    <string name="create_team">CREATE TEAM</string>
    <string name="_1">1</string>
    <string name="team_members">TEAM MEMBERS</string>
    <string name="roll_number">ROLL NUMBER</string>
    <string name="enter_leader_name">Enter leader name</string>
    <string name="name">Name</string>
    <string name="_3">3</string>
    <string name="problem_id_ps_id">PROBLEM ID (PS ID)</string>
    <string name="theme">THEME</string>
    <string name="e_g_team_tejas">e.g. Team Tejas</string>
    <string name="evaluating_team">Evaluating Team</string>
    <string name="problem_id_hk01">Problem ID: HK01</string>
    <string name="evaluation_round">EVALUATION ROUND</string>
    <string name="round_1_initial_pitch">Round 1: Initial Pitch</string>
    <string name="innovation">Innovation</string>
    <string name="technicality">Technicality</string>
    <string name="submit_final_score">Submit Final Score</string>
    <string name="market_amp_scalability"><![CDATA[Market & Scalability]]></string>
    <string name="feasibility">Feasibility</string>
    <string name="pitch_amp_communication"><![CDATA[Pitch & Communication]]></string>
    <string name="presentation">Presentation</string>
    <string name="design_amp_user_experience"><![CDATA[Design & User Experience]]></string>
    <string name="creativity_amp_originality"><![CDATA[Creativity & Originality]]></string>
    <string name="ui_ux">UI/UX</string>
    <string name="loading">Loading...</string>
    <string name="evaluation_submitted">Evaluation Submitted</string>
    <string name="scores_saved_successfully">Scores saved successfully</string>
    <string name="giet_university">GIET University</string>
    <string name="hi_rohan">Hi, Rohan!</string>
    <string name="activity_hub">Activity Hub</string>
    <string name="_20_ps_available">20 PS Available</string>
    <string name="access_your_hackathon_essentials">Access your hackathon essentials</string>
    <string name="attendance">Attendance</string>
    <string name="scan_for_check_in">Scan for check-in</string>
    <string name="marked">● MARKED</string>
    <string name="food_amp_snacks"><![CDATA[Food & Snacks]]></string>
    <string name="lunch_1_00_pm">Lunch @ 1:00 PM</string>
    <string name="upcoming">● UPCOMING</string>
    <string name="problem_statements">Problem Statements</string>
    <string name="schedule">Schedule</string>
    <string name="phase_2_coding">Phase 2: Coding</string>
    <string name="hackathon_finale">Hackathon Finale</string>
    <string name="join_us_at_the_main_auditorium">Join us at the Main Auditorium</string>
    <string name="live_now">LIVE NOW</string>
    <string name="quick_updates">Quick Updates</string>
    <string name="total_teams_42">TOTAL TEAMS (42)</string>
    <string name="sort_by_id">Sort by ID</string>
    <string name="add_team">Add Team</string>
    <string name="our_sponsors">Our Sponsors</string>
    <string name="view_all">View All</string>
    <string name="one_stop_ai">One Stop.AI</string>
    <string name="lagozon_ai">Lagozon.ai</string>
    <string name="team">TEAM</string>
    <string name="pass">PASS</string>
    <string name="faq">FAQ</string>
    <string name="hacknovation_1_0_gallery">Hacknovation 1.0 Gallery</string>
    <string name="vote_of_thanks">Vote Of Thanks</string>
    <string name="price_distribution">Prize Distribution</string>
    <string name="_4_members">4 MEMBERS</string>
    <string name="verified">VERIFIED</string>
    <string name="invite_new">Invite New</string>
    <string name="leader">Leader</string>
    <string name="edit_team_details">Edit Team Details</string>
    <string name="sign_out">Sign Out</string>
    <string name="full_rankings">FULL RANKINGS</string>
    <string name="giet_university_hacknovation_2_0">GIET UNIVERSITY HACKNovation 2.0</string>
    <string name="evaluator">EVALUATOR</string>
    <string name="assigned_teams_12">ASSIGNED TEAMS (12)</string>
    <string name="team_alpha">Team Alpha</string>
    <string name="theme_ai_ml">Theme: AI/ML</string>
    <string name="leader_rahul_sharma">Leader: Rahul Sharma</string>
    <string name="edit_team">Edit Team</string>
    <string name="team_registration">Team Registration</string>
    <string name="successful">Successful</string>
    <string name="sponsor_one">Sponsor One</string>
    <string name="sponsor_two">Sponsor Two</string>
    <string name="giet_university_premier_hackathon">GIET UNIVERSITY PREMIER HACKATHON</string>
    <string name="collaboration">COLLABORATION</string>
    <string name="supported_by">SUPPORTED BY</string>
    <string name="get_started">Get Started</string>
    <string name="don_t_just_innovate_hacknovate">Don\'t Just Innovate, Hacknovate!</string>
    <string name="sponsored_by">sponsored by</string>
    <string name="sourav_kumar_pati">Sourav Kumar Pati</string>
    <string name="app_management">APP Management</string>
    <string name="subrata_dhibar">Subrata Dhibar</string>
    <string name="supriyo_dawn">Supriyo Dawn</string>
    <string name="web_management">Web Management</string>
    <string name="designing">Designing</string>
    <string name="call">Call</string>
    <string name="mail">Mail</string>
    <string name="profile_image">Profile Image</string>
    <string name="ux_designing">UX Designing</string>
    <string name="coordinator_directory">Coordinator Directory</string>
    <string name="coordinators">Coordinators</string>
    <string name="hackathon_menu">Hackathon Menu</string>
    <string name="_2_day_meal_plan_for_participants">2-Day Meal Plan for Participants</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="saturday_feb_21">SATURDAY, FEB 21</string>
    <string name="sunday_feb_22">SUNDAY, FEB 22</string>
    <string name="please_present_your_ndigital_food_coupon_at_the_counter_special_dietary_requirements_can_be_requested_at_the_help_desk">Please present your \nDigital Food Coupon at the counter. Special dietary requirements can be requested at the help desk.</string>
    <string name="info">info</string>
    <string name="dy_dean_cs_giet_university">Dy. Dean(CS) GIET University</string>
    <string name="lead_coordinator">Lead Coordinator</string>
    <string name="dr_k_murli_gopal">Dr. K Murli Gopal</string>
    <string name="registrar_at_giet_university">Registrar at GIET University</string>
    <string name="dr_n_v_j_rao">Dr.N.V.J Rao</string>
    <string name="dr_raghvendra_kumar">Dr. Raghvendra Kumar</string>
    <string name="asso_prof_dept_cse">Asso. Prof. Dept CSE</string>
    <string name="veg_tadka_egg_curry_dal_khata_roti_rice_papad">Veg Curry, Dal, khata, Roti/Rice.</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="chicken_curry_panner_curry_dal_raita_roti_rice_papad">Non-Veg Items, Dal, Raita, Roti/Rice.</string>
    <string name="non_veg">Non-Veg</string>
    <string name="member_two">MEMBER TWO</string>
    <string name="member_three">MEMBER THREE</string>
    <string name="mentorship_guidance"><![CDATA[Mentorship & Guidance]]></string>
    <string name="technical_support">Technical Support</string>
    <string name="food_amp_refreshments"><![CDATA[Food & Refreshments]]></string>
    <string name="app_platfrom_amp_website"><![CDATA[App/Platfrom & Website]]></string>
    <string name="additional_comments">Additional Comments</string>
    <string name="tell_us_what_we_can_improve_for_hacknovation_3_0">Tell us what we can improve for Hacknovation 3.0...</string>
    <string name="submit_feedback">SUBMIT FEEDBACK</string>
    <string name="share_your_experience_with_giet_university">Share your experience with GIET University</string>
    <string name="overall_experience">Overall Experience</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="event_organization">Event Organization</string>
    <string name="bug_description">Bug Description</string>
    <string name="describe_the_steps_to_reproduce_the_bug">Describe the steps to reproduce the bug...</string>
    <string name="attachment">Attachment</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="found_a_glitch_in_the_hacknovation_app_nlet_us_know_th_edetails_so_we_can_fix_it_nimmediately">Found a glitch in the Hacknovation app?\nLet us know th edetails so we can fix it\nimmediately.</string>
    <string name="bug_title">Bug Title</string>
    <string name="brief_summary_of_the_issue">Brief Summary of the issue</string>
    <string name="upload_screenshot">Upload Screenshot</string>
    <string name="lunch">Lunch</string>
    <string name="_1_15_pm">1:15 PM</string>
    <string name="submit_bug">Submit Bug</string>
    <string name="update_team">Update Team</string>
    <string name="home">Home</string>
    <string name="faculty_coordinators">Faculty Coordinators</string>
</resources>