<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ReportBug">

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@android:color/white"
        android:elevation="2dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/back"
                android:src="@drawable/arrowback" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/back"
                android:textColor="#1F2937"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/orbitronregular"
            android:letterSpacing="0.05"
            android:text="@string/report_a_bug"
            android:textColor="#1F2937"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/hint_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/orbitronregular"
        android:text="@string/hacknovation_2_0"
        android:textColor="@color/primary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView

        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:fontFamily="@font/poppinsregular"
        android:text="@string/found_a_glitch_in_the_hacknovation_app_nlet_us_know_th_edetails_so_we_can_fix_it_nimmediately"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText

        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:background="@drawable/input_background"
        android:fontFamily="@font/poppinsregular"
        android:hint="Enter Your Name"

        android:paddingHorizontal="12dp"
        android:textColor="#1F2937"
        android:textColorHint="#9CA3AF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/text22"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/bug_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName" />

    <EditText


        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:background="@drawable/input_background"
        android:fontFamily="@font/poppinsregular"

        android:hint="@string/brief_summary_of_the_issue"
        android:paddingHorizontal="12dp"
        android:textColor="#1F2937"
        android:textColorHint="#9CA3AF"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text22"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/text221"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/bug_description"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitle" />

    <EditText
        android:id="@+id/etDescription"


        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        android:padding="14dp"
        android:gravity="top|start"
        android:background="@drawable/input_background"
        android:fontFamily="@font/poppinsregular"
        android:scrollbars="vertical"
        android:overScrollMode="always"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textPostalAddress"
        android:lines="5"
        android:minLines="4"
        android:maxLines="6"
        android:hint="@string/describe_the_steps_to_reproduce_the_bug"
        android:paddingHorizontal="12dp"
        android:textColor="#1F2937"
        android:textColorHint="#9CA3AF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text221"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/text2121"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/attachment"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <LinearLayout
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_dashed"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2121">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_upload" />

        <TextView
            android:id="@+id/txtUploadStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/upload_screenshot"
            android:textColor="#6B7280" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmitBug"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:text="@string/submit_bug"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/orbitronregular"
        android:background="@drawable/bg_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpload" />
</androidx.constraintlayout.widget.ConstraintLayout>